--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,7 +17,7 @@ title: being a pc in a video game
 email: ilhanakinserefoglu@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Poorly documented blog.
-baseurl: "/home" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "ilhann.tech" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  sakawasser
 
